--- a/index.css
+++ b/index.css
@@ -9,13 +9,24 @@ header {
   height: 100%;
   width: 100%;
 }
-
+.item{
+  width: 100px;
+  height: 100px;
+  margin: 5px;
+  background-color: #fcf2ec;
+  flex-flow: column wrap;
+}
 main {
+  display: flex;
   background-color: #92C9D5;
   width: 100%;
   height: 100%;
 }
-
+.flex-container {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+}
 footer {
   background-color: #DAEEEF;
   height: 100%;
